--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'French literature -- History and criticism'
 - !lcsh 'Authors, French'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: Molière -- Delille -- Bernardin de Saint-Pierre -- Mémoires du général
   La Fayette -- M. de Fontanes -- M. Joubert -- Léonard -- Aloïsius Bertrand -- Le
   comte de Ségur -- Joseph de Maistre -- Gabriel Naudé -- Appendice sur Joseph de
